Oprogramowanie/.metadata/.plugins/org.eclipse.cdt.ui/Manipulator.build.log
11:45:28 **** Incremental Build of configuration Debug for project Manipulator ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m0 -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32F051x8 -I../Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Src\usart.o ..\Src\usart.c 
In file included from ..\Src\usart.c:21:0:
../Inc/usart.h:33:8: error: unknown type name 'UART_HandleTypeDef'
 extern UART_HandleTypeDef huart1;
        ^~~~~~~~~~~~~~~~~~
..\Src\usart.c:27:1: error: unknown type name 'UART_HandleTypeDef'
 UART_HandleTypeDef huart1;
 ^~~~~~~~~~~~~~~~~~
..\Src\usart.c: In function 'MX_USART1_UART_Init':
..\Src\usart.c:34:9: error: request for member 'Instance' in something not a structure or union
   huart1.Instance = USART1;
         ^
..\Src\usart.c:35:9: error: request for member 'Init' in something not a structure or union
   huart1.Init.BaudRate = 9600;
         ^
..\Src\usart.c:36:9: error: request for member 'Init' in something not a structure or union
   huart1.Init.WordLength = UART_WORDLENGTH_8B;
         ^
..\Src\usart.c:36:28: error: 'UART_WORDLENGTH_8B' undeclared (first use in this function)
   huart1.Init.WordLength = UART_WORDLENGTH_8B;
                            ^~~~~~~~~~~~~~~~~~
..\Src\usart.c:36:28: note: each undeclared identifier is reported only once for each function it appears in
..\Src\usart.c:37:9: error: request for member 'Init' in something not a structure or union
   huart1.Init.StopBits = UART_STOPBITS_1;
         ^
..\Src\usart.c:37:26: error: 'UART_STOPBITS_1' undeclared (first use in this function)
   huart1.Init.StopBits = UART_STOPBITS_1;
                          ^~~~~~~~~~~~~~~
..\Src\usart.c:38:9: error: request for member 'Init' in something not a structure or union
   huart1.Init.Parity = UART_PARITY_NONE;
         ^
..\Src\usart.c:38:24: error: 'UART_PARITY_NONE' undeclared (first use in this function)
   huart1.Init.Parity = UART_PARITY_NONE;
                        ^~~~~~~~~~~~~~~~
..\Src\usart.c:39:9: error: request for member 'Init' in something not a structure or union
   huart1.Init.Mode = UART_MODE_TX_RX;
         ^
..\Src\usart.c:39:22: error: 'UART_MODE_TX_RX' undeclared (first use in this function)
   huart1.Init.Mode = UART_MODE_TX_RX;
                      ^~~~~~~~~~~~~~~
..\Src\usart.c:40:9: error: request for member 'Init' in something not a structure or union
   huart1.Init.HwFlowCtl = UART_HWCONTROL_NONE;
         ^
..\Src\usart.c:40:27: error: 'UART_HWCONTROL_NONE' undeclared (first use in this function)
   huart1.Init.HwFlowCtl = UART_HWCONTROL_NONE;
                           ^~~~~~~~~~~~~~~~~~~
..\Src\usart.c:41:9: error: request for member 'Init' in something not a structure or union
   huart1.Init.OverSampling = UART_OVERSAMPLING_16;
         ^
..\Src\usart.c:41:30: error: 'UART_OVERSAMPLING_16' undeclared (first use in this function)
   huart1.Init.OverSampling = UART_OVERSAMPLING_16;
                              ^~~~~~~~~~~~~~~~~~~~
..\Src\usart.c:42:9: error: request for member 'Init' in something not a structure or union
   huart1.Init.OneBitSampling = UART_ONE_BIT_SAMPLE_DISABLE;
         ^
..\Src\usart.c:42:32: error: 'UART_ONE_BIT_SAMPLE_DISABLE' undeclared (first use in this function)
   huart1.Init.OneBitSampling = UART_ONE_BIT_SAMPLE_DISABLE;
                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~
..\Src\usart.c:43:9: error: request for member 'AdvancedInit' in something not a structure or union
   huart1.AdvancedInit.AdvFeatureInit = UART_ADVFEATURE_NO_INIT;
         ^
..\Src\usart.c:43:40: error: 'UART_ADVFEATURE_NO_INIT' undeclared (first use in this function)
   huart1.AdvancedInit.AdvFeatureInit = UART_ADVFEATURE_NO_INIT;
                                        ^~~~~~~~~~~~~~~~~~~~~~~
..\Src\usart.c:44:7: warning: implicit declaration of function 'HAL_UART_Init' [-Wimplicit-function-declaration]
   if (HAL_UART_Init(&huart1) != HAL_OK)
       ^~~~~~~~~~~~~
..\Src\usart.c: At top level:
..\Src\usart.c:51:23: error: unknown type name 'UART_HandleTypeDef'
 void HAL_UART_MspInit(UART_HandleTypeDef* uartHandle)
                       ^~~~~~~~~~~~~~~~~~
..\Src\usart.c:84:25: error: unknown type name 'UART_HandleTypeDef'
 void HAL_UART_MspDeInit(UART_HandleTypeDef* uartHandle)
                         ^~~~~~~~~~~~~~~~~~

11:45:29 Build Finished (took 178ms)

